k8s/authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: authelia
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
